# queue-runtime

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  deny.toml  renovate.json
.github/workflows/: ci.yml  docs.yml  lint.yml
docs/: catalog.md  constraints.md
docs/adr/: ADR-001-hexagonal-architecture.md  ADR-002-session-ordering-abstraction.md  ADR-003-async-first.md  ADR-004-runtime-provider-selection.md  README.md
docs/spec/: README.md  architecture.md  assertions.md  constraints.md  edge-cases.md  mitm-protection-summary.md  operations.md  overview.md  providers.md  security.md  tradeoffs.md  vocabulary.md
docs/spec/modules/: aws.md  client.md  cryptography.md  messages.md  sessions.md
docs/standards/: source-control.md
src/providers/: aws.rs  azure.rs
