[package]
description = "Multi-provider queue runtime for Queue-Keeper"
edition = "2021"
license = "Apache-2.0"
name = "queue-runtime"
repository = "https://github.com/pvandervelde/queue-runtime"
version = "0.1.0"

# Crate metadata
keywords = ["github", "webhook", "api"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[dependencies]
# Core dependencies
tokio = { version = "1.0" }
tracing = { version = "1.0" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
uuid = { version = "1.0" }

# Date/time
chrono = { version = "1.0" }

# Error handling
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }

# Async traits
async-trait = { version = "1.0" }

# HTTP client
reqwest = { version = "1.0" }

# Azure Service Bus
azure_messaging_servicebus = { version = "1.0" }
azure_core = { version = "1.0" }
azure_identity = { version = "1.0" }

# Configuration
config = { version = "1.0" }

# Utilities
url = { version = "1.0" }
bytes = { version = "1.0" }
base64 = "0.22"
urlencoding = "2.1"
hmac = { version = "1.0" }
sha2 = { version = "1.0" }
hex = { version = "1.0" }
quick-xml = "0.31"

[dev-dependencies]
tempfile = "=3.23.0"
tokio-test = "=0.4.4"
